# Projeto-Keno-LP1

./: .gitignore  CMakeLists.txt  README.md  autor.md
include/: KenoBet.hpp  OtherFunctions.hpp
src/: KenoBet.cpp  KenoMain.cpp  OtherFunctions.cpp
